style: Tocando la variable --primary-background-root

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ html {
 }
 :root {
   --primary-color-text: #0d1b2a;
-  --primary-background-root: #e0e1dd;
+  --primary-background-root: #edf2f4;
   --primary-color-mark: #1b263b;
   --primary-background-btn: #415a77;
   --primary-color-border: #2b2d42;
