--- a/src/components/category-menu/category.scss
+++ b/src/components/category-menu/category.scss
@@ -1,14 +1,14 @@
 .menu {
   &__list {
     background-color: var(--primary-background-root);
-    padding: 1rem;
+    // padding: 1rem;
     position: absolute;
     left: 1.5rem;
     width: 50%;
     border: thin solid var(--primary-color-border);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
     gap: 2rem;
     padding-block: 2rem;
     list-style-type: none;
@@ -43,13 +43,16 @@
   -ms-transform: translateY(0);
   -o-transform: translateY(0);
 }
-
+.active {
+  display: block;
+  color: var(--primary-background-root);
+  background-color: var(--primary-color-mark);
+  width: 100%;
+}
 @media screen and (min-width: 62.5em) {
   .menu {
     &__list {
       position: static;
-      display: flex;
-      flex-direction: column;
       justify-content: space-evenly;
       width: 100%;
       height: 100%;
