--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -3,6 +3,7 @@
   max-height: 290px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   height: auto;
   padding: 0.5rem;
   box-shadow: 0 0 0.8rem 0.3rem rgba($color: #333, $alpha: 0.1);
@@ -25,29 +26,33 @@
     flex-grow: 2;
     font-size: clamp(1.2rem, 1.3vw, 2rem);
   }
-  &__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  &__price {
+  &__link {
+    font-size: 0.7rem;
     font-weight: 700;
-
-    span {
-      color: #06d6a0;
-    }
-  }
-  &__button {
-    padding: 0.5rem 1rem;
-    border: none;
-    background-color: var(--primary-background-btn);
     color: var(--primary-background-root);
-    font-size: 1rem;
+    text-decoration: none;
+    background-color: var(--primary-background-btn);
+    padding: 0.5rem 0.5rem;
     border-radius: 0.5rem;
     -webkit-border-radius: 0.5rem;
     -moz-border-radius: 0.5rem;
     -ms-border-radius: 0.5rem;
     -o-border-radius: 0.5rem;
-    cursor: pointer;
+    transition: transform 0.2s ease;
+    -webkit-transition: transform 0.2s ease;
+    -moz-transition: transform 0.2s ease;
+    -ms-transition: transform 0.2s ease;
+    -o-transition: transform 0.2s ease;
+  }
+}
+@media screen and (min-width: 62.5em) {
+  .card {
+    &__link:hover {
+      transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      -moz-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+      -o-transform: scale(0.9);
+    }
   }
 }
