--- a/src/index.scss
+++ b/src/index.scss
@@ -54,8 +54,44 @@ body {
 }
 .outlet {
   grid-area: outlet;
+  &__container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
-
+.item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  background-color: #fff;
+  padding: 1rem;
+  &__product {
+    width: 50%;
+    max-width: 200px;
+  }
+  &__img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+  }
+  &__fig {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  &__content {
+    width: 80%;
+  }
+  &__ul {
+    list-style-type: none;
+  }
+}
 @media screen and (min-width: 62.5em) {
   #root {
     grid-template-areas:
@@ -63,5 +99,18 @@ body {
       "category  outlet outlet car"
       "category  outlet outlet car";
     column-gap: 0.5rem;
+  }
+  .item {
+    height: auto;
+    width: auto;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    box-shadow: 0px 0px 1rem 0.2rem rgba($color: #1b263b, $alpha: 0.25);
+    &__content {
+      width: 30rem;
+    }
   }
 }
